adds changes to get test working

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "graphql": "^16.10.0",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
